--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,39 +1,37 @@
 @import '../../variables';
 
 .sidebar {
-  height: 100%;
-  min-width: 100px;
   display: flex;
   flex-direction: column;
+  min-width: 100px;
 
-  margin-top: 0;
+  margin: 0;
   padding-left: 0;
   border-right: 2px solid $border-color;
 
   li {
-    display: flex;
     flex: 1;
+    display: flex;
     justify-content: center;
     align-items: center;
 
     list-style: none;
     background-color: $bg-primary-color;
 
-    a {
-      padding: 10%;
-      color: $text-dark;
-      cursor: pointer;
-      text-decoration: none;
-      font-weight: bold;
-      text-transform: uppercase;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
     &.active {
       background-color: lighten($bg-secondary-color, 5%);
+    }
+  }
+
+  a {
+    color: $text-dark;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    &:hover {
+      text-decoration: underline;
     }
   }
 }
